docs(styling): Fix positioning on Safari

--- a/docs/src/_styles/components.css
+++ b/docs/src/_styles/components.css
@@ -216,7 +216,7 @@
 .form-control {
   @apply rounded-auto;
   border: solid 1px #dbdbe7;
-  @apply p-1;
+  @apply h-2x leading-h-2x px-1;
   width: 100%;
 }
 
